Actualizadas las traducciones.

--- a/Core/Translation/eu_ES.json
+++ b/Core/Translation/eu_ES.json
@@ -1531,7 +1531,7 @@
     "time": "Ordua",
     "timezone": "Ordu-zona",
     "title": "Izenburua",
-    "title-font-size": "Izenburuaren letra-tamaina",
+    "title-font-size": "Izenburuaren letra tamaina",
     "title-url": "Titulua (URL)",
     "to": "Nori",
     "to-refund": "Itzultzera",
