--- a/Core/Translation/pl_PL.json
+++ b/Core/Translation/pl_PL.json
@@ -73,10 +73,10 @@
     "alfa-code-2": "Kod alfa 2",
     "alfa-code-3": "Código alfa 3",
     "alias": "Pseudonim",
-    "alias-general-info": "Permite dar un nombre al valor de la columna de su izquierda",
+    "alias-general-info": "Pozwala nadać nazwę wartości w kolumnie po lewej stronie",
     "alias-wildcard-info": "Wartość aliasu zdefiniowanego wcześniej. Na przykład: %base%, %składka%",
     "all": "Wszystkie",
-    "all-variants": "Todas las variantes",
+    "all-variants": "Wszystkie warianty",
     "allow-delete": "Zezwól na usunięcie",
     "allow-delete-data": "Zezwalaj na USUNIĘCIE",
     "allow-export": "Zezwól na eksport",
@@ -244,7 +244,7 @@
     "close": "Cerrar",
     "close-box": "Zamknij pudełko",
     "close-exercise": "Zakończć ćwiczenia",
-    "closed": "Cerrado",
+    "closed": "Zamknięte",
     "closed-exercise": "Ćwiczenie %exerciseName% jest zamknięte.",
     "closed-exercise-cant-change-date": "El ejercicio %exerciseName% está cerrado. No se puede modificar la fecha.",
     "closing-accounting-completed": "Rok obrachunkowy zakończony pomyślnie",
@@ -269,7 +269,7 @@
     "columns": "Kolumny",
     "combination-code": "Kod kombinacji",
     "combinations": "Kombinacje",
-    "commercial-terms": "Términos comerciales",
+    "commercial-terms": "Warunki handlowe",
     "commission": "Prowizja",
     "commission-general-info": "Informacje ogólne dotyczące prowizji stosowanej przy sprzedaży produktów. Zastosowany zostanie procent z najbardziej restrykcyjnymi lub konkretnymi warunkami informowanymi.",
     "commission-settlement": "Rozliczenie prowizji %code%",
@@ -279,7 +279,7 @@
     "companies": "Empresas",
     "company": "Firma",
     "company-commission-info": "Sólo se aplicará a la empresa seleccionada",
-    "company-manager": "Administrador de la empresa",
+    "company-manager": "Administrator firmy",
     "company-name": "Nombre de empresa",
     "company-warehouse": "Firma\/Magazyn",
     "comparative": "Comparativo",
@@ -290,7 +290,7 @@
     "concept": "Koncepcja",
     "conditions": "Warunki",
     "configure-columns": "Konfigurator kolumn",
-    "confirm": "Confirmar",
+    "confirm": "Potwierdzić",
     "confirm-delete": "Czy na pewno chcesz to usunąć?",
     "connect": "Połączyć",
     "contact": "Kontakt",
@@ -373,7 +373,7 @@
     "dashboard": "Tablica",
     "dashboard-backup": "Kopia zapasowa",
     "dashboard-backup-p": "Przypominamy, że masz zainstalowany FacturaScripts na swoim PC, dlatego dane (faktury, klienci, itp...) są przechowywane tylko na Twoim PC. Regularnie twórz kopie zapasowe i przechowuj je z dala od komputera.",
-    "dashboard-for": "Tablero de %company%",
+    "dashboard-for": "Panel %company%",
     "data-source": "Źródła danych",
     "database": "Baza danych",
     "database-error": "Błąd połączenia z bazą danych",
@@ -387,7 +387,7 @@
     "date-wildcard-info": "Bieżąca data (data z komputera)",
     "dateentry-wildcard-info": "Data wskazana w nagłówku wpisu księgowego",
     "day": "Dzień",
-    "days": "Días",
+    "days": "Dni",
     "days-log-retention": "Liczba dni retencji logów",
     "days-until-expiration": "Dni do wygaśnięcia",
     "db-host": "Host bazy danych",
@@ -448,7 +448,7 @@
     "description-4ba": "Descripción 4ba",
     "description2": "Descripción 2",
     "description3": "Opis 3",
-    "design": "Diseño",
+    "design": "Projektowanie",
     "destination-warehouse": "Magazyn docelowy",
     "detail": "Szczegóły",
     "details": "Detalles",
@@ -594,7 +594,7 @@
     "expired-receipt": "Wygasły paragon",
     "export": "Eksportować",
     "export-bill": "Faktura eksportowa",
-    "extra-file": "Archivo extra",
+    "extra-file": "Dodatkowy plik",
     "failed": "Niepowodzenie",
     "families": "Rodziny",
     "family": "Familia",
@@ -634,13 +634,13 @@
     "fiscal-number": "Numer fiskalny",
     "fixed-value": "Valor fijo",
     "flag": "Flaga",
-    "folder-not-writable": "No se puede escribir sobre la carpeta de FacturaScripts.",
+    "folder-not-writable": "Nie można zapisać w folderze FacturaScripts.",
     "font": "Czcionka",
     "font-size": "Rozmiar czcionki",
     "footer": "Stopka",
     "footer-text": "Tekst stopki",
     "for-admins": "Dla administratorów",
-    "for-all": "Para todos",
+    "for-all": "Dla wszystkich",
     "for-all-exercises": "Dla wszystkich ćwiczeń",
     "for-purchase": "Do zakupu",
     "for-sale": "Na sprzedaż",
@@ -678,9 +678,9 @@
     "generated-at": "Generado el %when%",
     "generated-contacts": "%quantity% contactos generados.",
     "generated-customer-delivery-notes": "Wygenerowano %quantity% faktur sprzedaży.",
-    "generated-customer-estimations": "%quantity% presupuestos de cliente generados.",
+    "generated-customer-estimations": "Wygenerowano %quantity% oszacowań klientów.",
     "generated-customer-groups": "%quantity% grupos de clientes generados.",
-    "generated-customer-orders": "%quantity% pedidos de cliente generados.",
+    "generated-customer-orders": "Wygenerowano %quantity% zamówień od klientów.",
     "generated-customers": "%quantity% wygenerowanych klientów.",
     "generated-families": "%quantity% wygenerowanych rodzin.",
     "generated-invoice": "Wygenerowana faktura",
@@ -690,7 +690,7 @@
     "generated-supplier": "%quantity% dostawców wygenerowanych.",
     "generated-supplier-delivery-notes": "%quantity% albaranes de compra generados.",
     "generated-supplier-estimations": "%quantity% presupuestos de proveedor generados.",
-    "generated-supplier-orders": "%quantity% pedidos de proveedor generados.",
+    "generated-supplier-orders": "Wygenerowano %quantity% zamówień od dostawców.",
     "global-dto": "Globalne Dto",
     "global-dto-2": "Dto. global 2",
     "greater-than": "Większy niż",
@@ -704,7 +704,7 @@
     "group-by-subaccount": "Agrupar por subcuenta",
     "group-by-week": "Grupuj wg tygodnia",
     "group-by-week-unixtime": "Grupuj według tygodnia (unixtime)",
-    "group-by-year": "Agrupar por año",
+    "group-by-year": "Grupuj według roku",
     "group-by-year-unixtime": "Grupuj według roku (unix time)",
     "group-more-docs-p": "Jeśli chcesz, możesz grupować razem z innymi dokumentami tego klienta\/dostawcy",
     "group-name": "Nombre del Grupo",
@@ -736,7 +736,7 @@
     "hours": "Godziny",
     "http": "HTTP",
     "https": "HTTPS",
-    "i-forgot-password": "He olvidado mi contraseña",
+    "i-forgot-password": "Zapomniałem hasła",
     "iban": "IBAN",
     "icon": "Ikona",
     "id": "Id.",
@@ -762,7 +762,7 @@
     "infostate-component-title": "Informacja o stanie",
     "initial-number": "Numer początkowy",
     "insert-update": "Dodaj lub zmodyfikuj",
-    "installed": "Instalado",
+    "installed": "Zainstalowane",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
     "installer-p": "Bienvenido al instalador de FacturaScripts. Rellena los campos necesarios para conectar a la base de datos.",
@@ -804,7 +804,7 @@
     "irpf-subaccount-not-found": "Nie znaleziono subkonta IRPF",
     "is-admin": "Jest administratorem",
     "is-creditor": "Jest wierzycielem",
-    "is-person": "Persona física",
+    "is-person": "Osoba fizyczna",
     "iso": "ISO",
     "issued": "Wydano",
     "item-limit": "Elementy na stronę",
@@ -831,7 +831,7 @@
     "languages-en_EN": "Inglés",
     "languages-es_AR": "Hiszpański (Argentyna)",
     "languages-es_CL": "Espanol (Chile)",
-    "languages-es_CO": "Español (Colombia)",
+    "languages-es_CO": "Hiszpański (Kolumbia)",
     "languages-es_CR": "Español (Costa Rica)",
     "languages-es_DO": "Hiszpański (Rep. Dominikana)",
     "languages-es_EC": "Hiszpański (Ekwador)",
@@ -914,7 +914,7 @@
     "low-security": "Baja seguridad",
     "machine": "Máquina",
     "machines": "Maszyny",
-    "macro-account-note-info": "Códigos para el reemplazo por valores",
+    "macro-account-note-info": "Kody do zamiany na wartości",
     "mail-server-error": "Błąd połączenia z serwerem pocztowym",
     "mail-test-error": "La prueba de email ha fallado",
     "mail-test-ok": "Test e-mail został pomyślnie wykonany",
@@ -944,7 +944,7 @@
     "memcache-get-key-item": "Pobrano element '%item%' z Memcache.",
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Puerto Memcache",
-    "memcache-prefix": "Prefijo Memcache",
+    "memcache-prefix": "Prefiks Memcache",
     "memcache-set-key-item": "Przypisano element '%item%' do Memcache.",
     "menu": "Menu",
     "message": "Mensaje",
@@ -1013,8 +1013,8 @@
     "next": "Następny",
     "nick": "Nick",
     "no": "Nie",
-    "no-data": "Sin datos",
-    "no-data-received-form": "Ningún dato recibido por formulario",
+    "no-data": "Brak danych",
+    "no-data-received-form": "Nie otrzymano danych z formularza",
     "no-extra-lines": "Nie dodawaj dodatkowych linii",
     "no-gaps-found": "Nie znaleziono luk",
     "no-invoice": "Brak faktury",
@@ -1029,7 +1029,7 @@
     "none": "Ninguno",
     "normal": "Normalny",
     "not-allowed-delete": "Nie masz uprawnień do usunięcia",
-    "not-allowed-modify": "No tiene permiso para modificar",
+    "not-allowed-modify": "Nie masz uprawnień do modyfikacji",
     "not-enough-stock": "No hay suficiente stock de %reference%",
     "not-passed-integrity-check": "Niektóre pliki nie przeszły weryfikacji integralności ... <br\/>Możesz <a class='alert-link' target='_blank' href='IntegritySystemCheck'>uzyskać więcej szczegółów tutaj<\/a>.",
     "not-public": "Niepubliczny",
@@ -1093,7 +1093,7 @@
     "page-option-info": "Estas son las opciones de maquetación y permisos de este formulario o listado. Puedes modificar el orden de los campos, ocultarlos, hacerlos de solo lectura o aumentar el nivel de privilegios. Los cambios se aplicarán al usuario seleccionado.",
     "page-total-amount": "Łącznie na stronie",
     "pagename": "Nazwa strony",
-    "pages": "Páginas",
+    "pages": "Strony",
     "paid": "Pagado",
     "paid-or-unpaid": "Opłacone lub nieopłacone",
     "paid-receipts-prevent-action": "Nie można wykonać tej akcji, mając opłacone paragon",
@@ -1128,7 +1128,7 @@
     "pending-orders-button": "Zamów. Pts:",
     "pending-reception": "Oczekujący odbiór",
     "percentage": "Porcentaje",
-    "percentage-commission": "% Comisión",
+    "percentage-commission": "% Prowizja",
     "percentage-discount": "% Rabatu",
     "percentage-surcharge": "% R.E.",
     "percentage-vat": "% Podatek",
@@ -1282,7 +1282,7 @@
     "renew": "Odnów",
     "renumber": "Renumerar",
     "renumber-accounting": "Renumerar Asientos",
-    "renumber-accounting-error": "Ha ocurrido un error durante la renumeración de asientos en el ejercicio fiscal %exerciseCode%",
+    "renumber-accounting-error": "Wystąpił błąd podczas renumeracji wpisów w roku podatkowym %exerciseCode%",
     "renumber-accounting-ok": "Renumeración de asientos completada",
     "renumber-accounting-p": "Renumera los asientos por fecha, de menor a mayor",
     "renumber-invoices-p": "Renumera las facturas en base a la fecha, de menor a mayor",
@@ -1324,7 +1324,7 @@
     "saturday": "Sobota",
     "save": "Zapisz",
     "save-data": "Zapisz dane",
-    "save-filter": "Guardar filtro",
+    "save-filter": "Zapisz filtr",
     "sdk": "SDK",
     "search": "Szukaj",
     "search-document": "Wpisz numer %doctype%, aby wyszukać.",
@@ -1344,10 +1344,10 @@
     "send-audios": "Enviar audios",
     "send-documents": "Enviar documentos",
     "send-images": "Enviar imágenes",
-    "send-invoices": "Enviar facturas",
+    "send-invoices": "Wyślij faktury",
     "send-location": "Enviar ubicación",
     "send-mail": "Wyślij e-mail",
-    "send-mail-error": "Error al enviar el email",
+    "send-mail-error": "Błąd podczas wysyłania e-maila",
     "send-mail-ok": "E-mail wysłany pomyślnie",
     "send-videos": "Enviar vídeos",
     "sent-a-audio": "Envió un audio",
@@ -1360,7 +1360,7 @@
     "september": "Septiembre",
     "sequences": "Sekwencje",
     "serial-number": "Numer seryjny",
-    "serie": "Serie",
+    "serie": "Seria",
     "serieb": "Seria B",
     "serier": "Seria R",
     "serierb": "Seria RB",
@@ -1391,8 +1391,8 @@
     "signature": "Podpis",
     "simple": "Prosty",
     "simplified": "Uproszczona",
-    "size": "Tamaño",
-    "sketch": "Boceto",
+    "size": "Rozmiar",
+    "sketch": "Szkic",
     "sketch-invoice-warning": "Ta faktura jest nadal szkicem. Uczyń ją oficjalną, zmieniając jej status na wydany.",
     "small": "Mały",
     "smaller-than": "Mniejsze niż",
@@ -1412,7 +1412,7 @@
     "special-accounting-entries": "Specjalne wpisy księgowe",
     "special-accounts": "Konta specjalne",
     "specials-actions": "Akcje specjalne",
-    "spreadsheet-xls": "Archivo Excel",
+    "spreadsheet-xls": "Plik Excel",
     "standard": "Estándar",
     "start": "Początek",
     "start-date": "Fecha de inicio",
@@ -1421,7 +1421,7 @@
     "starting-cron": "Uruchamianie crona FacturaScripts...",
     "state": "Stan",
     "states": "Stany",
-    "status": "Estado",
+    "status": "Status",
     "status-document": "Stan dokumentu",
     "status-name-valid-length": "Nombre del estado no válido (debe tener entre 1 y 20 carácteres).",
     "status-value-is-number": "Pole statusu musi być liczbą.",
@@ -1543,7 +1543,7 @@
     "total-purchases": "Całkowite zakupy",
     "total-sales": "Całkowita sprzedaż",
     "total-value-error": "Wartość całkowita %docType% %docCode% jest nieprawidłowa (%docTotal%). Właściwa wartość: %calcTotal%",
-    "total-with-taxes": "Total + impuestos",
+    "total-with-taxes": "Całkowity + podatki",
     "totalirpf-value-error": "Nieprawidłowa łączna wartość IRPF %docType% %docCode% (%docTotalIRPF%). Poprawna wartość to: %calcTotalIRPF%",
     "totaliva-value-error": "Valor total iva de %docType% %docCode%incorrecto (%docTotalTax%). Valor correcto:  %calcTotalTax%",
     "totallinea-value-error": "Error en el valor de totallinea de la línea de IVA del impuesto %taxCode% de la factura. Valor correcto: %totalLine%",
@@ -1575,7 +1575,7 @@
     "undo": "Cofnij",
     "unit-profit": "Beneficio unit.",
     "unit-purchase-price": "Cena zakupu jednostkowa",
-    "unit-sale-price": "Precio venta unit.",
+    "unit-sale-price": "Cena sprzedaży jednostkowej",
     "unlimited": "Sin límites",
     "unlink": "Desvincular",
     "unlink-file": "Odłącz plik",
@@ -1591,7 +1591,7 @@
     "update-time": "Czas aktualizacji",
     "updated-model": "Zaktualizowano %model% (%key%) %desc%",
     "updater": "Aktualizacja",
-    "updates-available": "Actualizaciones disponibles",
+    "updates-available": "Dostępne aktualizacje",
     "updates-available-p": "Dostępne są aktualizacje FacturaScripts. Proszę kliknąć w aktualizator i pobrać nową wersję. Aktualizacje naprawiają błędy i dodają nowe funkcje.",
     "updating-attached-relations": "Aktualizowanie powiązań załączonych plików",
     "upload-file": "Prześlij plik",
@@ -1653,7 +1653,7 @@
     "without-domicile": "Bez zlecenia",
     "without-groups": "Bez grup",
     "without-regularization": "Sin regularización",
-    "without-tax": "Sin IVA",
+    "without-tax": "Bez VAT",
     "without-taxation": "Bez opodatkowania",
     "wizard": "Asystent",
     "wizard-p": "Wypełnij ten formularz dotyczący swojej firmy, aby zakończyć konfigurację.",
