--- a/Core/Translation/pt_BR.json
+++ b/Core/Translation/pt_BR.json
@@ -473,7 +473,7 @@
     "document-sequence": "sequencia-documento",
     "document-sequences": "Sequências de documentos",
     "document-states": "Estados do documento",
-    "document-type": "Tipo documento",
+    "document-type": "Tipo de documento",
     "document-type-valid-length": "Tipo de documento inválido (deve ter entre 1 e 20 caracteres).",
     "document-wildcard-info": "Documento assinalado na cabeceira do registo contábil",
     "document-without-total": "Documento %document% sem totais ou com o total a 0.",
@@ -577,7 +577,7 @@
     "excess": "excesso",
     "exclude-invalid": "Excluir inválidos",
     "exclude-valid": "Excluir válidos",
-    "exempt": "Isentar",
+    "exempt": "Isento",
     "exercise": "Exercício",
     "exercise-date-out-range": "A data não está no intervalo do exercício.",
     "exercise-date-range-exists": "Exercício já existe nesse intervalo de datas (%start% - %end%)",
@@ -928,7 +928,7 @@
     "manufacturers": "Fabricantes",
     "march": "Março",
     "margin": "m",
-    "margin-top": "Topo da margem",
+    "margin-top": "Margem superior",
     "mark-as-homepage": "Marcar como página inicial",
     "marked-as-homepage": "M",
     "max-input-vars-warning": "Com a configuração atual do PHP (max_input_vars), você não poderá trabalhar com documentos de mais de %numlines% linhas.",
@@ -940,7 +940,7 @@
     "mega-search": "MegaBuscador",
     "memcache": "Memcache",
     "memcache-clear": "Memcache foi limpo.",
-    "memcache-delete-key-item": "Elemento excluído '0' do Memcache.",
+    "memcache-delete-key-item": "Elemento excluído '%item%' do Memcache.",
     "memcache-get-key-item": "Obtido elemento '%item%' do Memcache.",
     "memcache-host": "Servidor Memcache",
     "memcache-port": "Porta do Memcache",
@@ -1249,7 +1249,7 @@
     "record-updated-correctly": "Registro atualizado corretamente.",
     "recreate-system-integrity": "Recriar integridade do sistema",
     "rectified-invoice": "fatura retificada",
-    "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
+    "rectified-invoice-p": "As faturas são documentos mercantis e têm uma série de restrições legais. Não podem ser eliminadas ou modificadas. Somente são permitidas devoluções totais ou parciais. Utilize este formulário para fazer uma devolução sobre esta fatura.",
     "rectified-invoices": "Faturas retificativas",
     "rectifying": "Retificativa",
     "rectifying-serie": "Série retificativa",
@@ -1409,7 +1409,7 @@
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
-    "special-accounting-entries": "special-accounting-entries",
+    "special-accounting-entries": "Lançamentos contabilísticos especiais",
     "special-accounts": "Contas especiais",
     "specials-actions": "Ações especiais",
     "spreadsheet-xls": "Arquivo Excel",
