--- a/Core/Translation/pt_PT.json
+++ b/Core/Translation/pt_PT.json
@@ -490,7 +490,7 @@
     "download-error": "Error al descargar. Código %status% - %error%",
     "download-xml": "Descargar XML",
     "downloads": "descargas",
-    "drag": "Arrastrar",
+    "drag": "Arrastar",
     "dto": "Disco.",
     "dto-2": "Dto. 2",
     "duplicate-record": "Registro duplicado",
@@ -522,7 +522,7 @@
     "empty-ref-or-missing": "Referencia vazia ou produto não encontrado",
     "enable": "Ativar",
     "enable-api": "Ativar API",
-    "enable-updates-beta": "Activar actualizaciones beta",
+    "enable-updates-beta": "Ativar atualizações beta",
     "enabled": "Ativado",
     "enabled-plugins": "Plugins ativos",
     "encrypt": "Criptografia",
@@ -723,7 +723,7 @@
     "hello": "Olá",
     "help": "Socorro",
     "help-button-p": "Consulta la ayuda en cada pantalla",
-    "help-server-accepts-filesize": "This server support files up to %size% MB.",
+    "help-server-accepts-filesize": "Este servidor aceita um tamanho máximo de %size% MB.",
     "hide": "Ocultar",
     "high": "Alto",
     "high-purchase-price": "Preço de compra mais alto",
@@ -761,7 +761,7 @@
     "info": "Info",
     "infostate-component-title": "Status Information",
     "initial-number": "Número inicial",
-    "insert-update": "Añadir o modificar",
+    "insert-update": "Adicionar ou modificar",
     "installed": "Instalado",
     "installed-plugins": "Instalados",
     "installer": "Instalador",
@@ -772,7 +772,7 @@
     "interest": "Interesse",
     "international-identifier": "Identificador internacional",
     "intra-community": "Intra-comunitária",
-    "invalid-alphanumeric-code": "invalid-alphanumeric-code",
+    "invalid-alphanumeric-code": "O código introduzido (%value%) não é válido. (%column%) deve ter entre %min% e %max% números ou letras, sem espaços, acentos ou outros caracteres.",
     "invalid-column-lenght": "%column% deve ter entre %min% e %max% caracteres.",
     "invalid-date": "Data inválida 0.",
     "invalid-date-there-are-invoices-after": "Data inválida: %date%. A fatura %other% é posterior e mesmo assim tem data anterior: %other-date%. Toda fatura deve ter data anterior ou igual à seguinte.",
@@ -801,7 +801,7 @@
     "ip-banned": "Acesso bloqueado temporariamente a partir do seu IP por motivos de segurança.",
     "irpf": "IRPF",
     "irpf-record-not-found": "Registro de IRS %value%% não encontrado.",
-    "irpf-subaccount-not-found": "irpf-subaccount-not-found",
+    "irpf-subaccount-not-found": "Subconta de IRPF não encontrada",
     "is-admin": "É administrador",
     "is-creditor": "É credor",
     "is-person": "É um indivíduo (não uma empresa)",
@@ -872,7 +872,7 @@
     "level-benefit-sales": "Nível para ver benefícios",
     "level-cost-sales": "Nível para ver custos",
     "level1": "Nível 1",
-    "level2": "Level 2",
+    "level2": "Nível 2",
     "level3": "Nível 3",
     "level4": "Nível 4",
     "liabilities": "Passivo",
@@ -972,7 +972,7 @@
     "month-11": "Novembro",
     "month-12": "Dezembro",
     "month-2": "Fevereiro",
-    "month-3": "Marzo",
+    "month-3": "Março",
     "month-4": "Abril",
     "month-5": "Maio",
     "month-6": "Junho",
@@ -1058,7 +1058,7 @@
     "only-active": "Apenas ativos",
     "only-charged": "only-charged",
     "only-closed": "Apenas fechado",
-    "only-insert": "Sólo añadir",
+    "only-insert": "Somente adicionar",
     "only-owner-data": "Mostrar apenas os registos do usuário",
     "only-pending": "Só pendentes",
     "only-suspended": "only-suspended",
@@ -1066,7 +1066,7 @@
     "open-exercise": "Abrir exercício",
     "open-tab": "Abrir numa nova aba",
     "opened": "Aberto",
-    "opening-acounting-completed": "opening-acounting-completed",
+    "opening-acounting-completed": "Abertura de exercício concluída",
     "opening-operation": "Apertura",
     "operation": "Operação",
     "operator": "Operador",
@@ -1241,14 +1241,14 @@
     "rebuild-stock": "reconstruir-estoque",
     "receipt": "recibo",
     "receipt-expense-account": "Gastos no recibo %document%",
-    "receipts": "receipts",
+    "receipts": "Recibos",
     "record-deleted-correctly": "Registro eliminado corretamente!",
     "record-deleted-error": "Erro ao excluir o registro",
     "record-not-found": "Registro não encontrado",
     "record-save-error": "Ocorreu um erro ao salvar os dados",
     "record-updated-correctly": "Registro atualizado corretamente.",
     "recreate-system-integrity": "Recriar integridade do sistema",
-    "rectified-invoice": "rectified-invoice",
+    "rectified-invoice": "Fatura retificativa",
     "rectified-invoice-p": "Las facturas son documentos mercantiles y tiene una serie de restricciones legales. No se pueden eliminar ni modificar. Solamente se permiten devoluciones totales o parciales. Utiliza este formulario para hacer una devolución sobre esta factura.",
     "rectified-invoices": "Faturas retificativas",
     "rectifying": "Retificativa",
@@ -1277,7 +1277,7 @@
     "related-subaccount-purchases-sales": "Subconta relacionada para compras e vendas",
     "reloading": "Recarregando...",
     "remove-filter": "Eliminar filtros",
-    "remove-from-list": "remove-from-list",
+    "remove-from-list": "Remover da lista",
     "removing-logs-until": "Eliminando logs até %date%",
     "renew": "Renovar",
     "renumber": "Renumerar",
@@ -1329,7 +1329,7 @@
     "search": "Pesquisa",
     "search-document": "Digite o número de %doctype% para pesquisar.",
     "search-product": "Procurar produto",
-    "second-hand": "Segunda mano",
+    "second-hand": "Em segunda mão",
     "second-quarter": "2º trimestre",
     "second-trimester": "Segundo Trimestre",
     "select": "Selecionar",
@@ -1343,7 +1343,7 @@
     "send-anonymous-data": "Enviar dados anónimos",
     "send-audios": "Enviar áudios",
     "send-documents": "Enviar documentos",
-    "send-images": "Enviar imágenes",
+    "send-images": "Enviar imagens",
     "send-invoices": "Enviar faturas",
     "send-location": "Enviar localização",
     "send-mail": "Enviar email",
@@ -1402,19 +1402,19 @@
     "sort-by-column": "Ordenar por coluna",
     "sort-by-date-asc": "Ordenar por data asc.",
     "sort-by-date-desc": "Ordenar por data desc.",
-    "sort-by-ref-asc": "Ordenar por referencia asc.",
+    "sort-by-ref-asc": "Ordenar por referência asc.",
     "sort-by-ref-desc": "Ordenar por referência desc.",
     "sorted-asc": "Ordenado ascendente",
     "sorted-desc": "Ordenado de forma descendente",
     "source": "Fonte",
     "source-code": "Código fonte",
     "special-account": "Conta especial",
-    "special-accounting-entries": "special-accounting-entries",
+    "special-accounting-entries": "Lançamentos contabilísticos especiais",
     "special-accounts": "Contas especiais",
     "specials-actions": "Ações especiais",
     "spreadsheet-xls": "Arquivo XLS",
     "standard": "Padrão",
-    "start": "Inicio",
+    "start": "Início",
     "start-date": "Data de início",
     "start-hour": "Hora de início",
     "start-time": "Hora de início",
@@ -1500,7 +1500,7 @@
     "tax-area": "Área fiscal",
     "tax-areas": "Áreas fiscais",
     "tax-base": "Base Tributável",
-    "tax-credit-account": "Credit account for taxes",
+    "tax-credit-account": "Conta de crédito para impostos",
     "tax-debit-account": "Conta de débito para impostos",
     "tax-transport": "Transporte fiscal",
     "taxes": "Impostos",
@@ -1512,7 +1512,7 @@
     "templates": "Modelos",
     "test": "Teste",
     "test-mail-not-implemented": "O teste do controlador de correio Mail não está implementado",
-    "test-sendmail-not-implemented": "El test del controlador de correo sendmail no está implementado",
+    "test-sendmail-not-implemented": "O teste do controlador de e-mail sendmail não está implementado",
     "text-color": "Cor do texto",
     "texts": "Textos",
     "third-quarter": "3º trimestre",
@@ -1590,7 +1590,7 @@
     "update-supplier-prices": "Atualizar preços dos fornecedores",
     "update-time": "Hora de atualização",
     "updated-model": "Actualizado %model% (%key%) %desc%",
-    "updater": "Updater",
+    "updater": "Atualizador",
     "updates-available": "Actualizaciones disponibles",
     "updates-available-p": "Há atualizações disponíveis para o FacturaScripts. Por favor, clique no atualizador e faça o download da nova versão. As atualizações corrigem erros e adicionam novas funções.",
     "updating-attached-relations": "Atualizando contadores de relações anexadas",
@@ -1610,7 +1610,7 @@
     "validate-iban": "Validar IBAN",
     "valuation-type": "Tipo de avaliação",
     "value": "Valor",
-    "value-x": "value-x",
+    "value-x": "Valor X",
     "value-y": "Valor Y",
     "values": "values",
     "variables": "Variáveis",
